# CatCrops

./: .gitignore  LICENSE  README.md  README.md~  env_catcrops.yml  env_catcrops_nocuda.yml  pyproject.toml  recompile_h5_csv.py  requirements.txt  setup.py  setup.py~  test.py  train.py  train_arg  training_summary_generator.py
catcrops/: __init__.py  evaluation_utils.py  transforms.py
catcrops/datasets/: catcrops.py
catcrops/models/: LongShortTermMemory.py  MSResNet.py  OmniScaleCNN.py  StarRNN.py  TempCNN.py  TransformerModel.py  __init__.py
docs/: CatCrops_Dataset.md
processing/: download_dataset.py  gee_S2_download.py  test.py  train.py  train_worker.sh
processing/RESULTS/Trial00/: model_78.pth
proves/: README.md  eval_results.py  prova1.py  readme_catcrops_dataset.md  recompile_h5_csv.py  zip.py
workers/: train_worker.sh  worker_test_CatCrops_transform.sh  worker_test_baseline.sh  worker_train_CatCrops_transform.sh  worker_train_baseline.sh
